css: use pre instead of pre-wrap to avoid wrapping '--' messages

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -37,7 +37,7 @@ td.message {
     word-wrap: break-word;
 }
 .text {
-    white-space: pre-wrap;
+    white-space: pre;
 }
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
